# badminton-survey-app-cron

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt  set_webhook.py  survey_message.txt
app/: config.py  game_post_form.py  main.py  telegram_sender.py  telegram_welcome.py  upmatches_api.py  venue_matcher.py  youform.py
bruno/: Telegram Send (Default Message).bru  Telegram Send.bru  bruno.json
tests/: test_game_post_form.py  test_upmatches_api.py  test_venue_matcher.py
todo/: telegram_fastapi_cron.md
