[project]
name = "badminton-telegram"
version = "0.1.0"
description = "FastAPI service that posts the badminton survey (with live YouForm submission count) to Telegram on a cron."
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[tool.setuptools]
# Only `app` is an importable package. Without this, setuptools flat-layout
# auto-discovery also picks up sibling dirs (e.g. `todo/`) and fails the build
# with "Multiple top-level packages discovered in a flat-layout".
packages = ["app"]
